Install graphvis as well

--- a/Setup/Dockerfile
+++ b/Setup/Dockerfile
@@ -1,3 +1,5 @@
 FROM tensorflow/tensorflow:latest-jupyter
-RUN pip3 install pandas sklearn
+RUN apt-get update
+RUN apt-get install graphviz
+RUN pip3 install pandas sklearn graphvis
 RUN mkdir /tf/experiments
