--- a/Setup/Dockerfile
+++ b/Setup/Dockerfile
@@ -1,5 +1,5 @@
 FROM tensorflow/tensorflow:latest-jupyter
 RUN apt-get update
 RUN apt-get install -y graphviz
-RUN pip3 install pandas sklearn graphviz
+RUN pip3 install pandas sklearn graphviz Pillow
 RUN mkdir /tf/experiments
